testdata/typechecker/error/classes/portfolio_UndefSuperclass.java
// Tests that extensions of undefined classes error.

int main() {
    return 0;
}

class UndefSuperclassClass extends UndefClass {

}
